--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/ExamenTPVIII/nbproject/private/
+/ExamenTPVIII/build/
