examen 2 parcial TPV

--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,5 @@ __pycache__/
 *.pyc
 /ExamenTPVIII/nbproject/private/
 /ExamenTPVIII/build/
+/TPV2doParcial/nbproject/private/
+/TPV2doParcial/build/
