--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,5 @@ __pycache__/
 /ExamenTPVIII/build/
 /TPV2doParcial/nbproject/private/
 /TPV2doParcial/build/
+/rotacion/nbproject/private/
+/rotacion/build/
