initial acomodar arreglo

--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,5 @@ __pycache__/
 /TPV2doParcial/build/
 /rotacion/nbproject/private/
 /rotacion/build/
+/AcomodarArreglo/nbproject/private/
+/AcomodarArreglo/build/
