--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ __pycache__/
 /AcomodarArreglo/nbproject/private/
 /AcomodarArreglo/build/
 /Ocurrencias/nbproject/private/
+/valorMayor/nbproject/private/
