--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,7 @@ __pycache__/
 /AcomodarArreglo/build/
 /Ocurrencias/nbproject/private/
 /valorMayor/nbproject/private/
+/json/nbproject/private/
+/com.howtodoinjava.demo/nbproject/private/
+/XMLExample/nbproject/private/
+/XMLExample/build/
