--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,5 @@ __pycache__/
 /com.howtodoinjava.demo/nbproject/private/
 /XMLExample/nbproject/private/
 /XMLExample/build/
+/TPVIII_Parcial3/nbproject/private/
+/TPVIII_Parcial3/build/
