initial examen PVIIIp3

--- a/.gitignore
+++ b/.gitignore
@@ -280,3 +280,5 @@ __pycache__/
 /XMLExample/build/
 /TPVIII_Parcial3/nbproject/private/
 /TPVIII_Parcial3/build/
+/PVIII_Examen_Parcial3/nbproject/private/
+/PVIII_Examen_Parcial3/build/
